Add charts for the score

--- a/src/TriviaServer/TriviaServer.csproj
+++ b/src/TriviaServer/TriviaServer.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.27.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.0-preview.6.20323.1" />
   </ItemGroup>
 
 </Project>
