--- a/src/TriviaClient/TriviaClient.csproj
+++ b/src/TriviaClient/TriviaClient.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.27.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.36.0" />
+	<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc3" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc3" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc3" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.0.0-rc3" />
+	<PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.0.1" />
+	<PackageReference Include="Seq.Extensions.Logging" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
